[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "crystal_kernel"
author = "alanmsant"
author-email = "alanmsant@gmail.com"
home-page = "https://github.com/alanmsant/crystal_kernel"
requires = ["pexpect", "ipykernel"]
description-file = "README.md"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

